# 0-shell

./: .gitignore  Cargo.toml  README.md  hhh
1/: test
docs/: echo_docs.md  ls_docs.md
history/: 0-shell_history
src/: colors.rs  consts.rs  main.rs  parser.rs  shell.rs
src/commands/: cat.rs  cd.rs  clear.rs  cp.rs  echo.rs  exit.rs  guide.rs  help.rs  history.rs  ls.rs  man.rs  mkdir.rs  mod.rs  mv.rs  pwd.rs  rm.rs
src/commands/ls/: ls.rs  ls_mod.rs  ls_models.rs  ls_tools.rs  mod.rs
tests/: integration.rs
tests/cat_tests/: hh  kk.txt
tests/ls_tests/: exec_file  sym_file
tests/ls_tests/dir_sym/: file.txt
yy/: Cargo.toml  finnn.txt  uuuuu.txt
yy/nested/: case1.txt
