[package]
name = "shell-0"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
anyhow = "1.0.95" 
colored = "3.0.0"
is_executable = "1.0"
rustyline = "17.0.1"
users = "0.11.0"
libc = "0.2"
xattr = "1.3"
terminal_size = "0.3"
console = "0.15"
atty = "0.2"
is_number = "0.1.1"

